CREATE TABLE
    Content_Rating (CR_ID INT PRIMARY KEY, CR_RATING VARCHAR(20));

-- Alternate way of making sure M_VIEWER_RATING is between 0.0 and 10.0
-- CREATE DOMAIN rating_domain AS NUMERIC(3, 1)
-- CHECK (VALUE >= 0.0 AND VALUE <= 10.0);
CREATE TABLE
    Movie (
        M_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        M_WATCHMODE_ID INT NOT NULL,
        M_IMDB VARCHAR(20),
        M_TMDB INT NOT NULL,
        M_TITLE VARCHAR(100) NOT NULL,
        M_PLOT TEXT NOT NULL,
        M_RUNTIME INT NOT NULL,
        M_VIEWER_RATING FLOAT NOT NULL,
        M_RELEASE_YEAR INT NOT NULL,
        CR_ID INT NOT NULL,
        FOREIGN KEY (CR_ID) REFERENCES Content_Rating (CR_ID),
        CHECK (
            M_VIEWER_RATING >= 0.0
            AND M_VIEWER_RATING <= 10.0
            AND M_VIEWER_RATING * 10 = CAST(M_VIEWER_RATING * 10 AS INTEGER)
        )
    );

CREATE TABLE
    AKA (
        AKA_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        M_ID INT NOT NULL,
        AKA_TITLE VARCHAR(100) NOT NULL,
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE
    );

CREATE TABLE
    Keyword (
        K_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        M_ID INT NOT NULL,
        K_KEYWORD VARCHAR(100) NOT NULL,
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE
    );

CREATE TABLE
    Language (
        L_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        L_LANGUAGE VARCHAR(30),
        L_CODE VARCHAR(2)
    );

CREATE TABLE
    Movie_Language (
        M_ID INT NOT NULL,
        L_ID INT NOT NULL,
        PRIMARY KEY (M_ID, L_ID),
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE,
        FOREIGN KEY (L_ID) REFERENCES Language (L_ID)
    );

CREATE TABLE
    Review (
        R_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        M_ID INT NOT NULL,
        R_AUTHOR VARCHAR(100) NOT NULL,
        R_NAME VARCHAR(200) NOT NULL,
        R_RATING INT NOT NULL,
        R_REVIEW TEXT NOT NULL,
        R_DATE DATE NOT NULL,
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE
    );

CREATE TABLE
    Director (
        D_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        D_NAME VARCHAR(100) NOT NULL
    );

CREATE TABLE
    Movie_Director (
        M_ID INT NOT NULL,
        D_ID INT NOT NULL,
        PRIMARY KEY (M_ID, D_ID),
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE,
        FOREIGN KEY (D_ID) REFERENCES Director (D_ID)
    );

CREATE TABLE
    Country (
        C_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        C_NAME VARCHAR(100) NOT NULL,
        C_CODE VARCHAR(2) NOT NULL
    );

CREATE TABLE
    Movie_Country (
        M_ID INT NOT NULL,
        C_ID INT NOT NULL,
        PRIMARY KEY (M_ID, C_ID),
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE,
        FOREIGN KEY (C_ID) REFERENCES Country (C_ID)
    );

CREATE TABLE
    Actor (
        A_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        A_NAME VARCHAR(100) NOT NULL
    );

CREATE TABLE
    Movie_Actor (
        M_ID INT NOT NULL,
        A_ID INT NOT NULL,
        PRIMARY KEY (M_ID, A_ID),
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE,
        FOREIGN KEY (A_ID) REFERENCES Actor (A_ID)
    );

CREATE TABLE
    Genre_Type (
        GT_ID INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
        GT_TYPE VARCHAR(100) NOT NULL
    );

CREATE TABLE
    Movie_Genre (
        M_ID INT NOT NULL,
        GT_ID INT NOT NULL,
        PRIMARY KEY (M_ID, GT_ID),
        FOREIGN KEY (M_ID) REFERENCES Movie (M_ID) ON DELETE CASCADE,
        FOREIGN KEY (GT_ID) REFERENCES Genre_Type (GT_ID)
    );